--- a/css/style.css
+++ b/css/style.css
@@ -710,6 +710,9 @@ main {
   border-radius: 5px;
 }
 
+.text__description--error {
+  color: #b53a05;
+}
 
 /**
   * Кнопка для отправки изображения
